--- a/src/battle/app/sawhat/public/css/sawhat_v2.css
+++ b/src/battle/app/sawhat/public/css/sawhat_v2.css
@@ -120,7 +120,7 @@ img{
 /* ---- Layout ---- */
 .content{
 	margin: auto;
-	padding: 6px;
+	padding: 12px;
 	/*max-width: 960px;*/
 }
 header{
@@ -137,7 +137,7 @@ header{
 	line-height: normal;
 	background-color: #999;
 	color: #fff;
-	padding: 6px;
+	padding: 6px 12px;
 	display: block;
 	vertical-align: middle;
 }
@@ -160,7 +160,7 @@ header{
 	/*border-width: 0 1px 1px;
 	border-style: solid;
 	border-color: #999;*/
-	padding: 6px;	
+	padding: 12px;	
 }
 .things ul li{
 	list-style: circle inside;
