--- a/src/battle/app/sawhat/public/css/sawhat_v2.css
+++ b/src/battle/app/sawhat/public/css/sawhat_v2.css
@@ -125,9 +125,14 @@ img{
 .content{
 	margin: auto;
 	padding: 12px;
-	/*max-width: 960px;*/
 	background-color: #ccc;
 }
+
+.width_constraint{
+	max-width: 960px;
+	background-color: transparent;
+}
+
 header{
 	border-bottom: 2px solid #fff;
 	vertical-align: bottom;
@@ -167,9 +172,6 @@ footer.content{
 
 /* ---- Card Content ---- */
 .things{
-	/*border-width: 0 1px 1px;
-	border-style: solid;
-	border-color: #999;*/
 	padding: 12px;	
 }
 .things ul li{
