--- a/src/battle/app/sawhat/public/css/sawhat_v2.css
+++ b/src/battle/app/sawhat/public/css/sawhat_v2.css
@@ -365,17 +365,23 @@ footer.content{
 }
 
 /* ACE EDITOR */
-#editor_container { 
+
+#editor-mask {
+	overflow-y: hidden;
+}
+#editor-container {
 	position: relative;
-	height: 460px;
 }
 #editor {
 	border: 1px solid rgba(0, 0, 0, 0.05);
-    position: absolute;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
+	position: relative;
+	top: 0;
+	right: 0;
+	bottom: 0;
+	left: 0;
+}
+#editor .ace_sb {
+	display: none;
 }
 
 /* Footer */
