Sawhat: Added space between included cards

--- a/src/battle/app/sawhat/public/css/sawhat_v2.css
+++ b/src/battle/app/sawhat/public/css/sawhat_v2.css
@@ -87,9 +87,6 @@ img{
 	padding: 0.2em;
 }
 p {
-	/* C'est quoi ca ?! C'est le margin qui fout des décallages moche partout dans le texte à cause du parsedown qui fout des p P partout ! Mais ouais ! */
-	/*margin: 0.5em auto;*/
-	/* Ca c'est pas beaucoup mieux, mais ça nique pas les margin de 12px entre le banner et le texte */
 	margin: 0 auto 0.5em auto;
 }
 
@@ -199,7 +196,7 @@ footer.content{
 
 /* ---- Card Content ---- */
 .things{
-	padding: 12px;	
+	padding: 12px;
 }
 .things ul li{
 	list-style: circle inside;
@@ -284,7 +281,7 @@ footer.content{
 	column-count:2;
 }
 
-.include .things {margin: 0; border-width: 0;}
+.include .things { border-width: 0; }
 .code { 
 	font-family:Consolas,Monaco,Lucida Console,Liberation Mono,DejaVu Sans Mono,Bitstream Vera Sans Mono,Courier New;
 	display: block;
