--- a/src/battle/app/sawhat/public/css/sawhat_v2.css
+++ b/src/battle/app/sawhat/public/css/sawhat_v2.css
@@ -55,12 +55,8 @@ h2,h3,h4 {
 	border-color: rgba(0,0,0,0.3);
 	margin-bottom: 6px;
 }
-h3,h4 {
-	border-width: 0 0 1px;
-}
-h4 {
-	border-style: dashed;
-}
+h3,h4 { border-width: 0 0 1px; }
+/*h4 { border-style: dashed; }*/
 hr {
 	height: 1px;
 	color: #ccc;
@@ -107,6 +103,10 @@ p {
 .padding{ padding: 12px; }
 .smallpadding{ padding: 6px; }
 .smallestpadding{ padding: 2px; }
+.paddingtop{ padding-top: 12px; }
+.paddingbottom{ padding-bottom: 12px; }
+.paddingleft{ padding-left: 12px; }
+.paddingright{ padding-right: 12px; }
 .paddingleftright{ padding: 0px 12px; }
 .margin{ margin: 12px; }
 .smallmargin{ margin: 6px; }
