--- a/src/battle/app/sawhat/public/css/sawhat_v2.css
+++ b/src/battle/app/sawhat/public/css/sawhat_v2.css
@@ -54,6 +54,7 @@ h2,h3,h4 {
 	border-style: solid;
 	border-color: rgba(0,0,0,0.3);
 	margin-bottom: 6px;
+	margin-top: 6px;
 }
 h3,h4 { border-width: 0 0 1px; }
 /*h4 { border-style: dashed; }*/
@@ -200,7 +201,7 @@ footer.content{
 	padding: 12px 12px 1px;
 }
 .things ul li{
-	list-style: circle inside;
+	list-style: square inside;/*circle inside;*/
 }
 .things ol li{
 	list-style: decimal-leading-zero inside;
@@ -212,22 +213,12 @@ footer.content{
 	padding: 0;
 	margin: 3px 0;
 }
-.column_container .size1of2:nth-child(1) {
-	padding-right: 3px;
-}
-.column_container .size1of2:nth-child(2) {
-	padding-left: 3px;
-}
+.column_container .size1of2:nth-child(1) { padding-right: 3px; }
+.column_container .size1of2:nth-child(2) { padding-left: 3px; }
 
-.column_container .size1of3:nth-child(1) {
-	padding-right: 4px;
-}
-.column_container .size1of3:nth-child(2) {
-	padding: 0 2px;
-}
-.column_container .size1of3:nth-child(3) {
-	padding-left: 4px;
-}
+.column_container .size1of3:nth-child(1) { padding-right: 4px; }
+.column_container .size1of3:nth-child(2) { padding: 0 2px; }
+.column_container .size1of3:nth-child(3) { padding-left: 4px; }
 
 .size1of3 .column_container .size1of2:nth-child(1),
 .size1of3 .column_container .size1of2:nth-child(2) {
