Sawhat : corrected css misunderstanding
Can't see sh*t captain !

--- a/src/battle/app/sawhat/public/css/sawhat_v2.css
+++ b/src/battle/app/sawhat/public/css/sawhat_v2.css
@@ -290,7 +290,7 @@ footer.content{
 	column-count:2;
 }
 
-.include .things { border-width: 0; background: rgba(0,0,0,0.05); }
+.include .things { border-width: 0; }
 
 /* ---- Card Edit ---- */
 #card_edit_form legend {
