--- a/src/battle/app/sawhat/public/css/sawhat_v2.css
+++ b/src/battle/app/sawhat/public/css/sawhat_v2.css
@@ -170,7 +170,7 @@ tbody tr:nth-child(odd) {
 
 .width_constraint{
 	max-width: 960px;
-	/*background-color: transparent;*/
+	background-color: transparent;
 }
 
 header{
@@ -213,15 +213,15 @@ footer.content{
 
 /* ---- Breadcrumb ---- */
 .breadcrumb {
-	padding: 0;
-	margin: 0 0 6px 0;
-	border-bottom: 1px solid rgba(0,0,0,0.1);
+	padding: 4px 0 6px 0;
+	margin: 0 0 0 0;
+	/*border-bottom: 1px solid rgba(0,0,0,0.1);*/
 	border-radius: 0;
 	background: transparent;
 	color: rgba(0,0,0,0.2);
 }
 .breadcrumb a {
-	color: rgba(0,0,0,0.4);
+	/*color: rgba(0,0,0,0.4);*/
 }
 .breadcrumb a.last {
 	font-weight: bold;
