--- a/src/battle/app/sawhat/public/css/sawhat_v2.css
+++ b/src/battle/app/sawhat/public/css/sawhat_v2.css
@@ -57,7 +57,6 @@ h2,h3,h4 {
 	margin-top: 6px;
 }
 h3,h4 { border-width: 0 0 1px; }
-/*h4 { border-style: dashed; }*/
 hr {
 	height: 1px;
 	color: #ccc;
@@ -89,12 +88,15 @@ img{
 blockquote {
 	border-left: 2px solid rgba(0,0,0,0.2);
 	background: rgba(0,0,0,0.05);
-	padding: 0 0.5em;
-	margin-left: 0.5em;
+	padding: 0.5em;
+	margin: 0 0 1em 0.5em;
+}
+blockquote > :last-child {
+	margin-bottom: 0;
 }
 
 p {
-	margin: 0 auto 0.5em auto;
+	margin: 0 auto 1em;
 }
 
 table th, table td { padding: 0.2em 0.4em; border: 1px solid rgba(0,0,0,0.2); }
@@ -171,6 +173,7 @@ tbody tr:nth-child(odd) {
 .width_constraint{
 	max-width: 960px;
 	background-color: transparent;
+	padding-bottom: 0;
 }
 
 header{
@@ -213,15 +216,11 @@ footer.content{
 
 /* ---- Breadcrumb ---- */
 .breadcrumb {
-	padding: 4px 0 6px 0;
+	padding: 0;
 	margin: 0 0 0 0;
-	/*border-bottom: 1px solid rgba(0,0,0,0.1);*/
 	border-radius: 0;
 	background: transparent;
-	color: rgba(0,0,0,0.2);
-}
-.breadcrumb a {
-	/*color: rgba(0,0,0,0.4);*/
+	color: #888;
 }
 .breadcrumb a.last {
 	font-weight: bold;
@@ -232,16 +231,21 @@ footer.content{
 
 /* ---- Card Content ---- */
 .things{
-	/* must add 1px margin due to firefox bug */
-	padding: 12px 12px;/* 1px;*/
+	padding: 12px 12px;
 }
 .things ul li{
 	padding-left: 1em;
-	list-style: square inside;/*circle inside;*/
+	list-style: square inside;
 }
 .things ol li{
 	padding-left: 1em;
 	list-style: decimal-leading-zero inside;
+}
+.things > :first-child {
+	margin-top: 0;
+}
+.things > :nth-last-child(2) {
+	margin-bottom: 0;
 }
 
 .column_container .size1of1,
@@ -426,7 +430,6 @@ footer input {
 
 
 /* ---- Bootstrap fixes ?? ---- */
-
 form{ margin: 0;}
 
 .btn-link {
@@ -437,7 +440,6 @@ form{ margin: 0;}
 }
 
 /* ---- Media Queries ---- */
-
 @media screen and (max-width: 1200px) {
 	.size1of3 { width: 50%; }
 	.size1of2 { width: 100%; }
