--- a/src/battle/app/sawhat/public/css/sawhat_v2.css
+++ b/src/battle/app/sawhat/public/css/sawhat_v2.css
@@ -62,11 +62,10 @@ hr {
 	color: #ccc;
 	background: #ccc;
 	border: 0;
-	width: 96%;
 	margin: 0.5em auto;
 	break-before: avoid;
 }
-a{ text-decoration: none; color: #999; }
+a{ text-decoration: none; color: #999; cursor: pointer; }
 a:hover{ color: #999; color: rgba(0,0,0,0.3); }
 article{ padding: 0; }
 
