--- a/src/battle/lib/Prism/prism_okaida_mod.css
+++ b/src/battle/lib/Prism/prism_okaida_mod.css
@@ -28,7 +28,7 @@ pre[class*="language-"] {
 /* Code blocks */
 pre[class*="language-"] {
 	padding: 1em;
-	margin: .5em 0;
+	margin: 0 auto 1em;
 	overflow: auto;
 }
 
