--- a/src/battle/app/sawhat/public/css/sawhat_v2.css
+++ b/src/battle/app/sawhat/public/css/sawhat_v2.css
@@ -213,18 +213,18 @@ footer.content{
 	border: 0;
 }
 
-/* ---- Breadcrumb ---- */
-.breadcrumb {
+/* ---- Breadcrumbs ---- */
+.breadcrumbs {
 	padding: 0;
 	margin: 0 0 0 0;
 	border-radius: 0;
 	background: transparent;
 	color: #888;
 }
-.breadcrumb a.last {
+.breadcrumbs a.last {
 	font-weight: bold;
 }
-.breadcrumb a:hover {
+.breadcrumbs a:hover {
 	color: #fff;
 }
 
@@ -476,7 +476,7 @@ form{ margin: 0;}
 	.content:not(footer) {
 		padding: 0;
 	}
-	.breadcrumb { padding: 6px 6px 0; }
+	.breadcrumbs { padding: 6px 6px 0; }
 	.include {
 		margin: 0 -6px;
 	}
