Sawhat: Updated loadable cards style
Set loadable cards to look more like inserted cards.

--- a/src/battle/app/sawhat/public/css/sawhat_v2.css
+++ b/src/battle/app/sawhat/public/css/sawhat_v2.css
@@ -199,6 +199,11 @@ footer.content{
 	display: block;
 	vertical-align: middle;
 }
+.banner.loadable{
+	min-height: 0;
+	padding: 3px 6px;
+	line-height: 1em;
+}
 
 .banner h1,
 .banner h2,
