Sawhat: Updated included card style
Added border since background was not so visible. Might need more
discussion on that ...

--- a/src/battle/app/sawhat/public/css/sawhat_v2.css
+++ b/src/battle/app/sawhat/public/css/sawhat_v2.css
@@ -319,7 +319,10 @@ footer.content{
 	column-count:2;
 }
 
-.include .things { border-width: 0; }
+.include .things,.include .files {
+	border-width: 0 1px 1px;
+	border-style: dotted;
+}
 
 /* ---- Card Edit ---- */
 #card_edit_form legend {
