Sawhat: Updated breadcrumbs
Added position of current element in breacrumbs to match with a css
specific style

--- a/src/battle/app/sawhat/public/css/sawhat_v2.css
+++ b/src/battle/app/sawhat/public/css/sawhat_v2.css
@@ -226,7 +226,7 @@ footer.content{
 	background: transparent;
 	color: #888;
 }
-.breadcrumbs a.last {
+.breadcrumbs a.current {
 	font-weight: bold;
 }
 .breadcrumbs a:hover {
