Sawhat: Updated breadcrumbs margin

--- a/src/battle/app/sawhat/public/css/sawhat_v2.css
+++ b/src/battle/app/sawhat/public/css/sawhat_v2.css
@@ -220,7 +220,7 @@ footer.content{
 /* ---- Breadcrumbs ---- */
 .breadcrumbs {
 	padding: 0;
-	margin: 0 0 0 0;
+	margin: 4px 0;
 	border-radius: 0;
 	background: transparent;
 	color: #888;
