--- a/src/battle/app/sawhat/public/css/sawhat_v2.css
+++ b/src/battle/app/sawhat/public/css/sawhat_v2.css
@@ -94,9 +94,8 @@ blockquote > :last-child {
 	margin-bottom: 0;
 }
 
-p {
-	margin: 0 auto 1em;
-}
+p {	margin: 0 auto 1em; }
+ol,ul{ margin-bottom: 1em; }
 
 table th, table td { padding: 0.2em 0.4em; border: 1px solid rgba(0,0,0,0.2); }
 tbody tr:nth-child(odd) {
