--- a/src/battle/app/sawhat/public/css/sawhat_v2.css
+++ b/src/battle/app/sawhat/public/css/sawhat_v2.css
@@ -86,10 +86,7 @@ img{
 
 /* Typography */
 p {	margin: 0; }
-p + p {
-	text-indent: 1em;
-}
-ol,ul{ margin-top: 1.5em; margin-bottom: 1.5em; }
+ol,ul{ margin-bottom: 1.5em; }
 li > ul, li > ol {
 	margin-top: 0;
 	margin-bottom: 0;
