--- a/src/battle/app/sawhat/public/css/sawhat_v2.css
+++ b/src/battle/app/sawhat/public/css/sawhat_v2.css
@@ -42,27 +42,24 @@ body{
 	word-wrap:break-word;
 }
 section, article, header, footer, nav, aside, hgroup{ display: block; }
-h1, .h1{font-size:2em;font-weight:bold;line-height: 1.2em; font-style: normal;}
+h1, .h1{font-size:2em;font-weight:bold; font-style: normal;}
 h2, .h2{font-size:1.67em;font-weight:bold; font-style: normal;}
 h3, .h3{font-size:1.3em; font-weight:bold; font-style: normal;}
 h4, .h4{font-size:1.25em; font-weight:normal; font-style: normal;}
 h5, .h5{font-size:1.15em; font-weight:bold; font-style: normal;}
 h6, .h6{font-size:1em; font-weight:normal;  font-style: italic;}
 h1 { color: #999; }
-h2,h3,h4 {
-	border-width: 0 0 3px;
+h1,h2,h3,h4 {
+	border-width: 0 0 0.1em;
 	border-style: solid;
 	border-color: rgba(0,0,0,0.3);
-	margin-bottom: 6px;
-	margin-top: 6px;
 }
-h3,h4 { border-width: 0 0 1px; }
 hr {
 	height: 1px;
 	color: #ccc;
 	background: #ccc;
 	border: 0;
-	margin: 0.5em auto;
+	margin: 0.75em auto;
 	break-before: avoid;
 }
 a{ text-decoration: none; color: #999; cursor: pointer; }
@@ -80,12 +77,43 @@ img{
 	font-family: Consolas, Monaco, 'Andale Mono', monospace;
 	background: #eee;
 	border: 1px solid #ccc;
-	vertical-align: middle;
+	vertical-align: text-top;
 	padding: 0 0.3em;
+	-moz-box-sizing: border-box;
+	box-sizing: border-box;
+	line-height: 1em;
 }
 
 /* Typography */
-p {	margin: 0; }
+/* main line height = 1.5em => 1.5/font-size h = line-height h */
+/* line are not perfect because of border-bottom in some headers */
+h1, .h1{font-size:2em; margin:0.75em 0 0.675em;line-height: 1.5em;}
+h2, .h2{font-size:1.67em; margin:0.898em 0 0.898em;line-height: 0.898em;}
+h3, .h3{font-size:1.3em; margin:1.154em 0 1.154em;line-height: 1.154em;}
+h4, .h4{font-size:1.25em; margin:1.2em 0 1.2em;line-height: 1.2em;}
+h5, .h5{font-size:1.15em; margin:1.304em 0 1.304em;line-height: 1.304em;}
+h6, .h6{font-size:1em; margin:1.5em 0 1.5em;line-height: 1.5em;}
+/* normal margin + 2/3 */
+blockquote + h1, blockquote + .h1 {
+	margin-top: 1.25em;
+}
+blockquote + h2, blockquote + .h2 {
+	margin-top: 1.496em;
+}
+blockquote + h3, blockquote + .h3 {
+	margin-top: 1.923em;
+}
+blockquote + h4, blockquote + .h4 {
+	margin-top: 1.999em;
+}
+blockquote + h5, blockquote + .h5 {
+	margin-top: 2.172em;
+}
+blockquote + h6, blockquote + .h6 {
+	margin-top: 1em;
+}
+
+p + p { margin-top: 1.5em; }
 ol,ul{ margin-bottom: 1.5em; }
 li > ul, li > ol {
 	margin-top: 0;
@@ -208,10 +236,12 @@ footer.content{
 }
 .banner.loadable{
 	min-height: 0;
-	padding: 3px 6px;
-	line-height: 1em;
+	padding: 0 0.5em;
+	line-height: 1.5em;
 }
-
+.loadable_card {
+	margin: 0.75em 0;
+}
 .banner h1,
 .banner h2,
 .banner h3,
@@ -259,6 +289,9 @@ footer.content{
 	margin-bottom: 0;
 }
 
+.column_container {
+	margin: 1em 0; 
+}
 .column_container .size1of1,
 .column_container .size1of2,
 .column_container .size1of3 {
